[gd_scene load_steps=3 format=1]

[ext_resource path="res://scripts/debugger.gd" type="Script" id=1]
[ext_resource path="res://fonts/SFCartoonistHand/SFCartoonistHand-Bold.fnt" type="BitmapFont" id=2]

[node name="debugger" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="state_label" type="Label" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 84.0
margin/top = 152.0
margin/right = -45.0
margin/bottom = 115.0
custom_fonts/font = ExtResource( 2 )
text = "state"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="linear_velocity_label" type="Label" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 185.0
margin/top = 84.0
margin/right = 83.0
margin/bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "linear_v"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="atk_state_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 66.0
margin/top = -94.0
margin/right = 247.0
margin/bottom = -61.0
custom_fonts/font = ExtResource( 2 )
text = "atk_s"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="health_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -64.0
margin/top = -197.0
margin/right = 74.0
margin/bottom = -163.0
custom_fonts/font = ExtResource( 2 )
text = "health"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="element_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -64.0
margin/top = -165.0
margin/right = 74.0
margin/bottom = -131.0
custom_fonts/font = ExtResource( 2 )
text = "element"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


